--- a/Labo/Labo2/3.css
+++ b/Labo/Labo2/3.css
@@ -1,1 +1,29 @@
-css
+table {
+    border: 3px solid black;
+    border-collapse: collapse;
+    width: 160px;
+}
+
+tr {
+    border: 0.5px solid blue;
+}
+
+th {
+    background-color: lightgrey;
+    color: white;
+    height: 25px;
+    text-align: center;
+    border-bottom: 3px solid black;
+    font-size: 15px;
+}
+
+td {
+    width: 33.33%;
+    text-align: center;
+    font-size: 12px;
+    height: 20px;
+}
+
+p {
+    font-size: small;
+}
